testsuite/tests/typecheck/should_fail/FunDepOrigin1b.stderr

FunDepOrigin1b.hs:8:27: error:
    • Couldn't match type ‘Maybe a’ with ‘[a1]’
        arising from a functional dependency between constraints:
          ‘C Bool [a1]’
            arising from a use of ‘op’ at FunDepOrigin1b.hs:8:27-37
          ‘C Bool (Maybe a)’
            arising from a use of ‘op’ at FunDepOrigin1b.hs:8:10-24
    • In the expression: op False []
      In the expression: (op True Nothing, op False [])
      In an equation for ‘foo’: foo _ = (op True Nothing, op False [])
    • Relevant bindings include
        foo :: p -> (Maybe a, [a1]) (bound at FunDepOrigin1b.hs:8:1)
